@@ -1,4 +1,4 @@
-[{"input": {"sourceName": "A"},
+[{"input": {"sourceName": ["A"]},
     "output": {"code": "2001",
                "data": {"build_dict": {"binary_dicts": [{"binary_name": "B1",
                                                          "database": "mainline",
@@ -39,5 +39,6 @@
                                                        "database": "fedora30",
                                                        "source_num": 0},
                                          {"binary_num": 0, "database": "openEuler", "source_num": 0}]},
+                        "not_found_packages": [],
                         "not_found_components": []},
                "msg": "Successful Operation!"}}]
