@@ -38,7 +38,7 @@ class TestDependInfoBuildDepend(DependInfo):
         Initialization failed. No database was generated. Database information could not be found
         Returns:
         """
-        self.REQUESTS_KWARGS["data"] = json.dumps({'sourceName': 'CUnit'})
+        self.REQUESTS_KWARGS["data"] = json.dumps({'sourceName': ['CUnit']})
 
         # When DBS folder does not exist
         self.without_dbs_folder(self.REQUESTS_KWARGS, met=self,
@@ -56,13 +56,24 @@ class TestDependInfoBuildDepend(DependInfo):
 
         param_error_list = [
             "{}",
-            json.dumps({"sourceName": ""}),
-            json.dumps({"sourceName": "dsd" * 120}),
-            json.dumps({"sourceName": 0}),
+            json.dumps({"sourceName": [""],
+                        "level": "1"}),
+            json.dumps({"sourceName": ["dsd" * 120],
+                        "level": "1"}),
+            json.dumps({"sourceName": [0],
+                        "level": "1"}),
             json.dumps({"sourceName": "CUnit",
-                        "db_list": [12, 3, 4]}),
-            json.dumps({"sourceName": "CUnit",
-                        "db_list": "ccaa"})
+                        "db_list": ["1", 2, 3, 4],
+                        "level": "1"}),
+            json.dumps({"sourceName": ["CUnit"],
+                        "db_list": "ccaa",
+                        "level": "1"}),
+            json.dumps({"sourceName": ["CUnit"],
+                        "db_list": ["mainline"],
+                        "level": "a"}),
+            json.dumps({"sourceName": ["CUnit"],
+                        "db_list": ["mainline"],
+                        "level": "-2"})
         ]
         for error_param in param_error_list:
             self.REQUESTS_KWARGS["data"] = error_param
@@ -75,7 +86,7 @@ class TestDependInfoBuildDepend(DependInfo):
         """
         test package name not found
         """
-        self.REQUESTS_KWARGS["data"] = json.dumps({"sourceName": "qitiandasheng"})
+        self.REQUESTS_KWARGS["data"] = json.dumps({"sourceName": ["qitiandasheng"]})
         resp_dict = self.client_request(**self.REQUESTS_KWARGS)
 
         self.response_json_error_judge(resp_dict,
@@ -85,7 +96,7 @@ class TestDependInfoBuildDepend(DependInfo):
         """
         test database name not found
         """
-        self.REQUESTS_KWARGS["data"] = json.dumps({"sourceName": "CUnit",
+        self.REQUESTS_KWARGS["data"] = json.dumps({"sourceName": ["CUnit"],
                                                    "db_list": ["shifu", "bajie"]
                                                    })
 
